<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/base_padding"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/photo"
        android:scaleType="center"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/name_title"
        android:textSize="@dimen/big_title"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/career_subtitle"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/title_email"
        android:textAllCaps="true"/>
    
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_message"
        android:layout_marginTop="@dimen/small_margin"
        android:textAllCaps="true"/>


    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/message_hint"
        android:gravity="top"
        android:lines="4"/>

    <Button
        android:id="@+id/action_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_action"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_margin"/>

</LinearLayout>